# skia-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  init-skia.sh
include/: skia.h
src/: skia.cpp
tests/: compile_and_run_test.sh  test_libskia.c
